instead of using the JVM security manager to prevent external loading in SVGs, create a Batik UserAgent which disallows it and pass to the transcoder
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@34604 dd0e9695-b195-4be7-bd10-2dea1a65a6b6